# cuboverse

./: .gitignore  Cargo.toml  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
api/: README.md  build.gradle.kts
api/src/: block.rs  chunk.rs  entity.rs  event.rs  lib.rs  modification.rs  physics.rs  player.rs  world.rs
app/: .metadata  README.md  analysis_options.yaml  pubspec.yaml
app/.mason/: bricks.json
app/android/app/: build.gradle
app/lib/: main.dart
app/lib/cubits/: settings.dart  settings.freezed.dart
app/lib/game/: block.dart  chunk.dart  game.dart  player.dart  renderer.dart  world.dart
app/lib/helpers/: position.dart
app/lib/l10n/: app_en.arb
app/lib/overlays/: options.dart  pause.dart
app/lib/src/: native.dart
app/lib/widgets/: window.dart
app/linux/: CMakeLists.txt  my_application.cc
app/native/: Cargo.toml  build.rs
app/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs
app/native/src/api/: loader.rs  manager.rs  message.rs
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt  rust.cmake
app/windows/runner/: Runner.rc  main.cpp
common/: build.gradle.kts
common/src/androidMain/: AndroidManifest.xml
desktop/: build.gradle.kts
game/: Cargo.toml  index.html
game/src/: lib.rs  logic.rs  main.rs
game/src/logic/: manager.rs  message.rs  modification.rs
server/src/: main.rs
standard/: Cargo.toml
standard/src/: lib.rs  world.rs
(+32 files in other folders)
